--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,13 @@
             <artifactId>commons-validator</artifactId>
             <version>1.4.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
