--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ target/generated-sources/
 target/generated-test-sources/
 cancelOptions.ser
 
+src/main/java/org/logic/models/requests/
+target/classes/org/
+target/test-classes/
