--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,51 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <!-- Make this jar executable -->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-jar-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--&lt;!&ndash; DO NOT include log4j.properties file in your Jar &ndash;&gt;-->
+                    <!--<excludes>-->
+                        <!--&lt;!&ndash;<exclude>**/log4j.properties</exclude>&ndash;&gt;-->
+                    <!--</excludes>-->
+                    <!--<archive>-->
+                        <!--<manifest>-->
+                            <!--&lt;!&ndash; Jar file entry point &ndash;&gt;-->
+                            <!--<mainClass>org.Main</mainClass>-->
+                        <!--</manifest>-->
+                    <!--</archive>-->
+                    <!---->
+                <!--</configuration>-->
+            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>AltCoin</finalName>
+                            <archive>
+                                <manifest>
+                                    <mainClass>
+                                        org.Main
+                                    </mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <appendAssemblyId>false</appendAssemblyId>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -39,6 +84,7 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+            <scope>compile</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
         <dependency>
